--- a/style/style.css
+++ b/style/style.css
@@ -32,3 +32,29 @@ h1 {
 .intro {
   max-width: 75%;
 }
+
+.new-here{
+  width: 100%;
+  background-color: green;
+  padding: 3px;
+  text-align: center;
+}
+
+.table-cell{
+  border: solid 1px black;
+  padding: 2px;
+}
+
+table {
+  border: solid 1px black;
+}
+
+.big-button {
+  height: 100px;
+  width: 200px;
+  font-size: 48px;
+  background-color: rgb(132, 73, 73);
+  color: bisque;
+  border: none;
+  border-radius: 25px;
+}
